--- a/index.ipynb
+++ b/index.ipynb
@@ -426,16 +426,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['PyeongChang', 'South Korea', 2581000, 3194]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "list"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +450,7 @@
    "source": [
     "pyeongchang_values = list(cities[11].values())\n",
     "\n",
-    "ppyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
+    "print(pyeongchang_values) # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
     "type(pyeongchang_values) # list"
    ]
   },
