--- a/index.ipynb
+++ b/index.ipynb
@@ -467,10 +467,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyeongchang_keys = None\n",
+    "pyeongchang_keys = lis\n",
     "\n",
     "\n",
-    "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']\n",
+    "print(pyeongchang_keys) # ['City', 'Country', 'Population', 'Area']\n",
     "type(pyeongchang_keys) # list"
    ]
   },
