--- a/index.ipynb
+++ b/index.ipynb
@@ -467,7 +467,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyeongchang_keys = list()\n",
+    "pyeongchang_keys = list(cities[11])\n",
     "\n",
     "\n",
     "print(pyeongchang_keys) # ['City', 'Country', 'Population', 'Area']\n",
